--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.9.6",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -21,7 +21,7 @@
     "eject": "react-scripts eject"
   },
    "engines": {
-    "node": "18.x"
+    "node": "20.x"
   },
   "eslintConfig": {
     "extends": [
